Fix visibility when activated from minimized

HWNDMessageHandler was utilizing WM_SYSCOMMAND to determine when a window was
being minimized or restored, but that window message is not guaranteed to arrive
in all cases; for example, when the window is restored programmatically during
a protocol activation scenario.

This change alters how window minimized and restored state transitions are
detected by utilizing more fundamental WM_SIZE messages.

Added a test that validates expected behavior regardless of how the underlying
window was minimized or restored.

Bug: 914645
Change-Id: Ie775192a357f12921ec3ec6d7d3576c04270d4f0
Reviewed-on: https://chromium-review.googlesource.com/c/1380343
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617581}
Former-commit-id: ec91bf64648b8b49a30d156a770f1ea89e69126b